[package]
name = "stateset-escrow"
version = "0.0.7"
authors = ["Dom Steil <dom@stateset.io>"]
edition = "2021"
description = "Stateset Escrow contract"
license = "Apache-2.0"
repository = "https://github.com/stateset/stateset-contracts"
homepage = "https://app.stateset.zone"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "0.13.2"
cw2 = "0.13.2"
cw20 = "0.13.2"
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.13.2"
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.2"
cw20-base = { version = "0.13.2", features = ["library"] }